# iana-time-zone

./: .clang-format  .clippy.toml  CHANGELOG.md  Cargo.toml  README.md  bindings.txt  build.rs  deny.toml
.github/workflows/: rust.yml  zizmor.yaml
api_gen/: Cargo.toml
api_gen/src/: main.rs
examples/: get_timezone.rs  stress-test.rs
haiku/: Cargo.toml  build.rs
haiku/src/: implementation.cc  lib.rs
include/: impl_haiku.h
src/: Windows.rs  ffi_utils.rs  impl_haiku.cc  lib.rs  linux.rs  macos.rs  platform.rs  timezone.rs  tz_android.rs  tz_darwin.rs  tz_freebsd.rs  tz_haiku.rs  tz_illumos.rs  tz_linux.rs  tz_macos.rs  tz_netbsd.rs  tz_ohos.rs  tz_vxworks.rs  tz_wasm32.rs  tz_wasm32_emscripten.rs  tz_windows.rs  windows.rs  windows_bindings.rs
src/.github/workflows/: rust.yml
src/windows/: hstring.rs  inspectable.rs  interfaces.rs  mod.rs  tz_on_calendar.rs  winapi.rs
