[package]
name = "iana-time-zone"
description = "get the IANA time zone for the current system"
version = "0.1.37"
authors = ["Andrew Straw <strawman@astraw.com>"]
repository = "https://github.com/strawlab/iana-time-zone"
license = "MIT OR Apache-2.0"
keywords = ["IANA", "time"]
categories = ["date-and-time", "internationalization", "os"]
readme = "README.md"
edition = "2018"

[target.'cfg(any(target_os = "dragonfly", target_os = "freebsd", target_os = "linux"))'.dependencies]
rustix = { version = "0.35.7", features = ["fs"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.9"

[target.'cfg(any(target_os = "netbsd", target_os = "openbsd"))'.dependencies]
libc = "0.2.126"
errno = { version = "0.2.8", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
once_cell = "1.13.0"
winapi = { version = "0.3.9", features = ["activation", "combaseapi", "objbase", "roapi", "winerror", "winstring"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.58"
wasm-bindgen = "0.2.81"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.31"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
