[package]
name = "iana-time-zone"
description = "get the IANA time zone for the current system"
version = "0.1.40"
authors = ["Andrew Straw <strawman@astraw.com>"]
repository = "https://github.com/strawlab/iana-time-zone"
license = "MIT OR Apache-2.0"
keywords = ["IANA", "time"]
categories = ["date-and-time", "internationalization", "os"]
readme = "README.md"
edition = "2018"

[features]
# When enabled, the library will succeed to compile for unknown target platforms, and return an `Err(GetTimezoneError::OsError)` at runtime.
fallback = []

[target.'cfg(target_os = "android")'.dependencies]
android_system_properties = "0.1.4"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["activation", "combaseapi", "objbase", "roapi", "winerror", "winstring"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.58"
wasm-bindgen = "0.2.81"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.31"
