[package]
name = "iana-time-zone"
description = "get the IANA time zone for the current system"
version = "0.2.0"
authors = [
    "Andrew Straw <strawman@astraw.com>",
    "René Kijewski <rene.kijewski@fu-berlin.de>",
    "Ryan Lopopolo <rjl@hyperbo.la>",
    ]
repository = "https://github.com/strawlab/iana-time-zone"
license = "MIT OR Apache-2.0"
keywords = ["IANA", "time"]
categories = ["date-and-time", "internationalization", "os"]
readme = "README.md"
edition = "2018"

[features]
default = ["platform-all"]
# Allow users to opt out of platform support for platforms that require third
# party dependencies. Disabling any of these platforms (i.e. with
# `default-features = false`) will prevent the platform dependencies from
# appearing in downstream applications' `Cargo.lock`.
platform-all = [
  "platform-android",
  "platform-apple",
  "platform-haiku",
  "platform-wasm",
  "platform-windows",
]
platform-android = ["android_system_properties"]
platform-apple = ["core-foundation-sys"]
platform-haiku = ["iana-time-zone-haiku"]
platform-wasm = ["js-sys", "wasm-bindgen"]
platform-windows = ["windows"]
# When enabled, the library will succeed to compile for unknown target platforms, and return an `Err(GetTimezoneError::OsError)` at runtime.
fallback = []

[target.'cfg(target_os = "android")'.dependencies]
android_system_properties = { version = "0.1.5", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation-sys = { version = "0.8.3", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48.0", features = [ "Globalization" ], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.50", optional = true }
wasm-bindgen = { version = "0.2.70", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_os = "haiku")'.dependencies]
iana-time-zone-haiku = { version = "0.1.1", path = "haiku", optional = true }

[workspace]
members = [".", "haiku"]
default-members = ["."]
