[package]
name = "api_gen"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
windows-bindgen = "0.51"

# Dissociate this crate from the root workspace to allow older Rust to build the main crate within
# the workspace, without observing `edition = "2021"` inside `windows-bindgen`.
[workspace]
